[package]
name = "hyprswitch"
description = "A CLI/GUI that allows switching between windows in Hyprland"
version = "3.2.1"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["h3rmt"]
documentation = "https://docs.rs/crate/hyprswitch"
repository = "https://github.com/h3rmt/hyprswitch/"
keywords = ["hyprland"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
hyprland = { version = "0.4.0-beta.1", features = ["async-lite", "dispatch", "keyword", "data", "listener"], default-features = false }
async-channel = { version = "2.3.1", default-features = false }
log = "0.4.22"
stderrlog = { version = "0.6.0", default-features = false }
anyhow = { version = "1.0.94" }
lazy_static = { version = "1.5.0" }
notify-rust = { version = "4.11.3", features = ["zbus", "serde"], default-features = false }
semver = "1.0.23"

gtk4 = { version = "0.9.4", default-features = false }
gtk4-layer-shell = { version = "0.4.0" }
rand = { version = "0.8.5", default-features = false }

bincode = { version = "1.3.3" }
serde = { version = "1.0.215", features = ["derive"] }

[dev-dependencies]
random_color = { version = "1.0.0", default-features = false }
svg = { version = "0.18.0", default-features = false }

[profile.release]
strip = "debuginfo"
lto = true
opt-level = "s"
panic = "abort"
codegen-units = 1
